# platform.core.appfw.app-installers

./: .autotools  .cproject  .project  AUTHORS  CMakeLists.txt  Makefile.am  configure.ac  patch
common/: CMakeLists.txt
common/include/: AppInstaller.hxx  app_installer.h  context_installer.h  step-unzip.hxx  step.h  step.hxx  step_copy.h  step_register.h  step_unzip.h  utils.h
common/include/step/: signature_step.h  step.h  step_copy.h  step_generateXml.h  step_record.h  step_signature.h  step_unzip.h
common/include/utils/: logging.hxx  marcos.hxx
common/src/: AppInstaller.cxx  Makefile.am  app_installer.cc  context_installer.cc  step-unzip.cxx  utils.cc
common/src/step/: signature_step.cc  step-unzip.cxx  step_copy.cc  step_generateXml.cc  step_record.cc  step_register.cc  step_signature.cc  step_unzip.cc
native/: CMakeLists.txt
signature/: CMakeLists.txt
signature/include/: logging.h  signature_data.h  signature_parser.h  signature_validator.h  signature_xmlsec_adaptor.h
signature/src/: signature_data.cc  signature_parser.cc  signature_validator.cc  signature_xmlsec_adaptor.cc
src/: CMakeLists.txt
src/common/: CMakeLists.txt  app-installers.pc.in  app_installer.cc  app_installer.h  app_query_interface.h  backup_paths.cc  backup_paths.h  certificate_validation.cc  certificate_validation.h  context_installer.cc  context_installer.h  cxt_uninstall.h  external_mount.cc  external_mount.h  external_storage.cc  external_storage.h  feature_validator.cc  feature_validator.h  installer_context.cc  installer_context.h  package_external_storage.cc  package_external_storage.h  package_internal_storage.cc  package_internal_storage.h  package_storage.cc  package_storage.h  paths.cc  paths.h  pkgdir_tool_request.cc  pkgdir_tool_request.h  pkgmgr_interface.cc  pkgmgr_interface.h  pkgmgr_query.cc  pkgmgr_query.h  pkgmgr_registration.cc  pkgmgr_registration.h  pkgmgr_signal.cc  pkgmgr_signal.h  plugins_launcher.cc  plugins_launcher.h  (+21 more)
src/common/manifest_info/: account.h  background_category.h  ime_info.h
src/common/plugins/: plugin.cc  plugin.h  plugin_factory.cc  plugin_factory.h  plugin_list_parser.cc  plugin_list_parser.h  plugin_manager.cc  plugin_manager.h  plugin_xml_parser.cc  (+4 more)
src/manifest_handlers/: CMakeLists.txt  app_control_handler.cc  app_control_handler.h  application_icons_handler.cc  application_icons_handler.h  application_manifest_constants.h  appwidget_handler.cc  appwidget_handler.h  category_handler.cc  category_handler.h  ime_handler.cc  ime_handler.h  manifest-handlers.pc.in  metadata_handler.cc  metadata_handler.h  navigation_handler.h  permissions_handler.cc  permissions_handler.h  service_handler.cc  service_handler.h  setting_handler.h  splash_screen_handler.cc  splash_screen_handler.h  tizen_application_handler.cc  tizen_application_handler.h  widget_handler.cc  widget_handler.h
src/native/: CMakeLists.txt
src/parser/: CMakeLists.txt  app_control_info.cc  app_control_info.h  application_data.cc  application_data.h  application_manifest_constants.cc  application_manifest_constants.h  macros.h  manifest-parser.pc.in  manifest.cc  manifest.h  manifest_constants.h  manifest_handler.cc  manifest_handler.h  manifest_parser.cc  manifest_parser.h  manifest_util.cc  manifest_util.h  permission_types.h  string_util.cc  string_util.h  system_locale.cc  system_locale.h  values.cc  values.h  widget_manifest_parser.cc  widget_manifest_parser.h
src/pkg_initdb/: 10_package-manager-add.post  11_package-manager-del.post  CMakeLists.txt  pkg_initdb.cc
src/pkg_install_manifest/: CMakeLists.txt  pkg_install_manifest.cc
src/pkg_recovery/: CMakeLists.txt  package-recovery.service  pkg_recovery.cc
src/pkgdir_maker/: CMakeLists.txt  pkgdir_maker.cc  pkgdir_maker_impl.sh
src/pkgdir_tool/: 20_pkgdir-tool-add.post  CMakeLists.txt  org.tizen.pkgdir_tool.conf  org.tizen.pkgdir_tool.service  pkgdir-tool.service  pkgdir_tool.cc  pkgdir_tool.service
src/signature/: CMakeLists.txt  logging.h  marcos.h  signature_data.cc  signature_data.h  signature_parser.cc  signature_parser.cc~  signature_parser.h  signature_validator.cc  signature_validator.h  signature_xmlsec_adaptor.cc  signature_xmlsec_adaptor.h
src/tpk/: CMakeLists.txt  Exception.h  ManifestParser.cc  ManifestParser.h  Task.cc  Task.h  XmlNodes.h  build.sh  exception.h  main.cc  manifest_parser.cc  manifest_parser.h  task.cc  task.h  tpk_app_query_interface.cc  tpk_app_query_interface.h  tpk_backend.cc  tpk_installer.cc  tpk_installer.h  xml_nodes.h
src/unit_tests/: CMakeLists.txt  parser_manifest_handler_unittest.cc  parser_manifest_unittest.cc  parser_manifest_util_unittest.cc  parser_unittest.cc  run-unit-tests.sh  service_handler_unittest.cc  signature_unittest.cc  smoke_test.cc  string_util_unittest.cc  utils_values_unittest.cc  widget_manifest_parser_manifest_handler_unittest.cc  widget_manifest_parser_manifest_unittest.cc  widget_manifest_parser_manifest_util_unittest.cc  widget_manifest_parser_unittest.cc  xml_parser_unittest.cc
src/utils/: CMakeLists.txt  byte_size_literals.h  clist_helpers.h  file_util.cc  file_util.h  logging.h  macros.h  string_util.cc  string_util.h  system_locale.cc  system_locale.h  utf_converter.cc  utf_converter.h  values.cc  values.h
src/wgt/: CMakeLists.txt  rds_parser.cc  rds_parser.h  step_parse.cc  update_workaround.cc  update_workaround.h  wgt_app_query_interface.cc  wgt_app_query_interface.h  wgt_backend.cc  wgt_backend_data.cc  wgt_backend_data.h  wgt_installer.cc  wgt_installer.h
src/widget-manifest-parser/: CMakeLists.txt  app_control_info.cc  app_control_info.h  application_data.cc  application_data.h  application_manifest_constants.cc  application_manifest_constants.h  manifest.cc  manifest.h  manifest_handler.cc  manifest_handler.h  manifest_util.cc  manifest_util.h  permission_types.h  widget_manifest_parser.cc  widget_manifest_parser.h
src/xml_parser/: xml_parser.cc  xml_parser.h
src/xpk/: CMakeLists.txt
wgt/: CMakeLists.txt
wgt/src/: Makefile.am  step-parse.cxx  step_parse.cc  wgt-backend.cxx  wgt_backend.cc
xpk/: CMakeLists.txt
(+464 files in other folders)
