# Target - sources
SET(SRCS
  src/app_installer.cc
  src/context_installer.cc
  src/step/step_unzip.cc
  src/step/signature_step.cc
  src/step/step_copy.cc
)
# Target - definition
ADD_LIBRARY(${TARGET_LIBNAME_COMMON} SHARED ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_LIBNAME_COMMON} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_LIBNAME_COMMON} PUBLIC
  PKGMGR_DEPS
  PKGMGR_INFO_DEPS
  PKGMGR_PARSER_DEPS
  PKGMGR_INSTALLER_DEPS
  MINIZIP_DEPS
  ZLIB_DEPS
  TZPLATFORM_CONFIG_DEPS
  LIBXML_DEPS
  Boost
)
# Target in-package deps
TARGET_LINK_LIBRARIES(${TARGET_LIBNAME_COMMON} ${TARGET_LIBNAME_SIGNATURE})

# Extra
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_COMMON} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_COMMON} PROPERTIES SOVERSION ${VERSION_MAJOR})

# Install
INSTALL(TARGETS ${TARGET_LIBNAME_COMMON} DESTINATION ${LIB_INSTALL_DIR})
