SET(NATIVE_BACKEND ${TARGET_NATIVE_BACKEND})
PROJECT(${NATIVE_BACKEND} CXX)

SET(SRCS
	src/native-backend.cxx
)

pkg_check_modules(PKG_INSTALLER_DEPS REQUIRED pkgmgr-installer)
FOREACH(flag ${PKG_INSTALLER_DEPS_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

ADD_EXECUTABLE(${NATIVE_BACKEND} ${SRCS})
ADD_DEPENDENCIES(${NATIVE_BACKEND} ${TARGET_LIBNAME_COMMON})

TARGET_LINK_LIBRARIES(${NATIVE_BACKEND} ${TARGET_LIBNAME_COMMON} ${PKG_INSTALLER_DEPS_LDFLAGS})
SET_TARGET_PROPERTIES(${NATIVE_BACKEND} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
SET_TARGET_PROPERTIES(${NATIVE_BACKEND} PROPERTIES SKIP_BUILD_RPATH true)

# Install
INSTALL(TARGETS ${NATIVE_BACKEND} DESTINATION ${BINDIR})
