IF(BUILD_PARSER)
  ADD_SUBDIRECTORY(parser)
  ADD_SUBDIRECTORY(manifest_handlers)
ELSE(BUILD_PARSER)
  ADD_SUBDIRECTORY(common)
  ADD_SUBDIRECTORY(signature)
  ADD_SUBDIRECTORY(utils)

  ADD_SUBDIRECTORY(wgt)
  ADD_SUBDIRECTORY(tpk)
  #ADD_SUBDIRECTORY(xpk)
  #ADD_SUBDIRECTORY(native)
ENDIF(BUILD_PARSER)
ADD_SUBDIRECTORY(unit_tests)
