SET(WGT_BACKEND ${TARGET_WGT_BACKEND})
PROJECT(${WGT_BACKEND} CXX)

SET(SRCS
	src/wgt-backend.cxx
)

pkg_check_modules(PKG_INSTALLER_DEPS REQUIRED pkgmgr-installer)
FOREACH(flag ${PKG_INSTALLER_DEPS_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)


ADD_EXECUTABLE(${WGT_BACKEND} ${SRCS})
ADD_DEPENDENCIES(${WGT_BACKEND} ${TARGET_LIBNAME_COMMON})

TARGET_LINK_LIBRARIES(${WGT_BACKEND} ${TARGET_LIBNAME_COMMON} ${PKG_INSTALLER_DEPS_LDFLAGS})
SET_TARGET_PROPERTIES(${WGT_BACKEND} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
SET_TARGET_PROPERTIES(${WGT_BACKEND} PROPERTIES SKIP_BUILD_RPATH true)

# Install
INSTALL(TARGETS ${WGT_BACKEND} DESTINATION ${BINDIR})
