# Target - sources
SET(SRCS
  src/wgt-backend.cxx
)
# Target - definition
ADD_EXECUTABLE(${TARGET_WGT_BACKEND} ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_WGT_BACKEND} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src/")
# Target - deps
SET(DEPS
  PKGMGR_INSTALLER_DEPS
)
APPLY_PKG_CONFIG(${TARGET_WGT_BACKEND} PUBLIC ${DEPS})
# Target - in-package deps
TARGET_LINK_LIBRARIES(${TARGET_WGT_BACKEND} ${TARGET_LIBNAME_COMMON})

# Install
INSTALL(TARGETS ${TARGET_WGT_BACKEND} DESTINATION ${BINDIR})
