SET(XPK_BACKEND ${TARGET_XPK_BACKEND})
PROJECT(${XPK_BACKEND} CXX)

SET(SRCS
	src/xpk-backend.cxx
)

pkg_check_modules(PKG_INSTALLER_DEPS REQUIRED pkgmgr-installer)
FOREACH(flag ${PKG_INSTALLER_DEPS_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

ADD_EXECUTABLE(${XPK_BACKEND} ${SRCS})
ADD_DEPENDENCIES(${XPK_BACKEND} ${TARGET_LIBNAME_COMMON})

TARGET_LINK_LIBRARIES(${XPK_BACKEND} ${TARGET_LIBNAME_COMMON} ${PKG_INSTALLER_DEPS_LDFLAGS})
SET_TARGET_PROPERTIES(${XPK_BACKEND} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
SET_TARGET_PROPERTIES(${XPK_BACKEND} PROPERTIES SKIP_BUILD_RPATH true)

# Install
INSTALL(TARGETS ${XPK_BACKEND} DESTINATION ${BINDIR})
