# Target - sources
SET(SRCS
  src/xpk-backend.cxx
)
# Target - definition
ADD_EXECUTABLE(${TARGET_XPK_BACKEND} ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_XPK_BACKEND} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src/")
# Target - deps
SET(DEPS
  PKGMGR_INSTALLER_DEPS
)
APPLY_PKG_CONFIG(${TARGET_XPK_BACKEND} PUBLIC ${DEPS})
# Target - in-package deps
TARGET_LINK_LIBRARIES(${TARGET_XPK_BACKEND} ${TARGET_LIBNAME_COMMON})

# Install
INSTALL(TARGETS ${TARGET_XPK_BACKEND} DESTINATION ${BINDIR})
