# Target - sources
SET(SRCS
  tpk-backend.cc
)
# Target - definition
ADD_EXECUTABLE(${TARGET_NATIVE_BACKEND} ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_NATIVE_BACKEND} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_NATIVE_BACKEND} PUBLIC
  PKGMGR_INSTALLER_DEPS
)
# Target - in-package deps
TARGET_LINK_LIBRARIES(${TARGET_NATIVE_BACKEND} ${TARGET_LIBNAME_COMMON})

# Install
INSTALL(TARGETS ${TARGET_NATIVE_BACKEND} DESTINATION ${BINDIR})
