# Target - sources
SET(SRCS
  manifest.cc
  manifest_handler.cc
  manifest_parser.cc
  manifest_util.cc
  string_util.cc
  system_locale.cc
  values.cc
)
# Target - definition
ADD_LIBRARY(${TARGET_LIBNAME_PARSER} SHARED ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_LIBNAME_PARSER} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_LIBNAME_PARSER} PUBLIC
  LIBIRI_DEPS
  LIBXML_DEPS
  PKGMGR_INFO_DEPS
  VCONF_DEPS
  Boost
)

# Extra
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_PARSER} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_PARSER} PROPERTIES SOVERSION ${VERSION_MAJOR})

# Install
INSTALL(TARGETS ${TARGET_LIBNAME_PARSER} DESTINATION ${LIB_INSTALL_DIR})
