# Target - sources
SET(SRCS
  pkg_initdb.cc
)

# Target - definition
ADD_EXECUTABLE(${TARGET_PKG_INITDB} ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_PKG_INITDB} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_PKG_INITDB} PUBLIC
  PKGMGR_DEPS
  Boost
)
# Target - in-package deps
TARGET_LINK_LIBRARIES(${TARGET_PKG_INITDB} PUBLIC ${TARGET_LIBNAME_COMMON})
SET_TARGET_PROPERTIES(${TARGET_PKG_INITDB} PROPERTIES COMPILE_FLAGS ${CFLAGS} "-fPIE")
SET_TARGET_PROPERTIES(${TARGET_PKG_INITDB} PROPERTIES LINK_FLAGS "-pie")
# Install
INSTALL(TARGETS ${TARGET_PKG_INITDB} DESTINATION ${BINDIR})
