# Target - sources
SET(SRCS
  pkg_install_manifest.cc
)

# Target - definition
ADD_EXECUTABLE(${TARGET_PKG_INSTALL_MANIFEST} "pkg_install_manifest.cc")
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_PKG_INSTALL_MANIFEST} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_PKG_INSTALL_MANIFEST} PUBLIC
  TPK_MANIFEST_HANDLERS_DEPS
  PKGMGR_DEPS
  Boost
)
# Target - in-package deps
TARGET_LINK_LIBRARIES(${TARGET_PKG_INSTALL_MANIFEST} PUBLIC ${TARGET_LIBNAME_COMMON})

# Install
INSTALL(TARGETS ${TARGET_PKG_INSTALL_MANIFEST} DESTINATION ${BINDIR})
