# Target - sources
SET(SRCS
  pkg_recovery.cc
)

# Target - definition
ADD_EXECUTABLE(${TARGET_PKG_RECOVERY} "pkg_recovery.cc")
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_PKG_RECOVERY} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_PKG_RECOVERY} PUBLIC
  TZPLATFORM_CONFIG_DEPS
  Boost
)
# Target - in-package deps
TARGET_LINK_LIBRARIES(${TARGET_PKG_RECOVERY} PUBLIC ${TARGET_LIBNAME_COMMON})

# Install
INSTALL(TARGETS ${TARGET_PKG_RECOVERY} DESTINATION ${BINDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/package-recovery.service DESTINATION ${UNITDIR_USER})
