# Target - sources
SET(SRCS
  pkgdir_tool.cc
)

# Target - definition
ADD_EXECUTABLE(${TARGET_PKGDIR_TOOL} "pkgdir_tool.cc")
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_PKGDIR_TOOL} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_PKGDIR_TOOL} PUBLIC
  LIBGUM_DEPS
  PKGMGR_INSTALLER_DEPS
)
# Target - in-package deps
TARGET_LINK_LIBRARIES(${TARGET_PKGDIR_TOOL} PUBLIC ${TARGET_LIBNAME_COMMON})

# Install
INSTALL(TARGETS ${TARGET_PKGDIR_TOOL} DESTINATION ${BINDIR})


