# Target - sources
SET(SRCS
  pkgdir_tool.cc
)

# Target - definition
ADD_EXECUTABLE(${TARGET_PKGDIR_TOOL} "pkgdir_tool.cc")
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_PKGDIR_TOOL} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_PKGDIR_TOOL} PUBLIC
  PKGMGR_INSTALLER_DEPS
  GDBUS_DEPS
)
# Target - in-package deps
TARGET_LINK_LIBRARIES(${TARGET_PKGDIR_TOOL} PUBLIC ${TARGET_LIBNAME_COMMON})
SET_TARGET_PROPERTIES(${TARGET_PKGDIR_TOOL} PROPERTIES COMPILE_FLAGS ${CFLAGS} "-fPIE")
SET_TARGET_PROPERTIES(${TARGET_PKGDIR_TOOL} PROPERTIES LINK_FLAGS "-pie")

# Install
INSTALL(TARGETS ${TARGET_PKGDIR_TOOL} DESTINATION ${BINDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/org.tizen.pkgdir_tool.service DESTINATION ${PREFIX}/share/dbus-1/system-services/)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/org.tizen.pkgdir_tool.conf DESTINATION ${SYSCONF_INSTALL_DIR}/dbus-1/system.d/)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/pkgdir-tool.service DESTINATION ${UNITDIR})
