# Target - sources
SET(SRCS
  signature_data.cc
  signature_parser.cc
  signature_validator.cc
  signature_xmlsec_adaptor.cc
)
# Target - definition
ADD_LIBRARY(${TARGET_LIBNAME_SIGNATURE} SHARED ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_LIBNAME_SIGNATURE} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_LIBNAME_SIGNATURE} PUBLIC
  OPENSSL_DEPS
  XMLSEC1_DEPS
  Boost
)

# Extra
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_SIGNATURE} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_SIGNATURE} PROPERTIES SOVERSION ${VERSION_MAJOR})

# Install
INSTALL(TARGETS ${TARGET_LIBNAME_SIGNATURE} DESTINATION ${LIB_INSTALL_DIR})
