CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(TARGET_TPK tpk-backend)
OPTION(HOSTTEST "Option for the test on the host PC" OFF)
SET(SRCS
  main.cc
  Task.cc
  Step/StepParse.cc
  Step/StepSymbolicLink.cc
  ManifestParser.cc
)
SET(TPK_LDFLAGS -rdynamic)

INCLUDE(FindPkgConfig)
IF(${HOSTTEST})
	MESSAGE("Host Test mode.")
	SET(TPK_CFLAGS ${TPK_CFLAGS} -DHOSTTEST)
	SET(MOCK_MODULES test/mock_pkgmgr_installer.c)
	SET(SRCS ${SRCS} ${MOCK_MODULES})

ELSE(${HOSTTEST})
	PKG_CHECK_MODULES(PKGMGR_DEPS REQUIRED pkgmgr)
	SET(TPK_CFLAGS ${TPK_CFLAGS} ${PKGMGR_DEPS_CFLAGS} -I${CMAKE_CURRENT_SOURCE_DIR}/../)
	SET(TPK_LDFLAGS ${TPK_LDFLAGS} ${PKGMGR_DEPS_LDFLAGS} ${TARGET_LIBNAME_COMMON})
ENDIF(${HOSTTEST})

ADD_EXECUTABLE(${TARGET_TPK} ${SRCS})
IF(DEFINED TPK_CFLAGS)
	SET_TARGET_PROPERTIES(${TARGET_TPK} PROPERTIES COMPILE_FLAGS ${TPK_CFLAGS})
ENDIF(DEFINED TPK_CFLAGS)
IF(DEFINED TPK_LDFLAGS)
	TARGET_LINK_LIBRARIES(${TARGET_TPK} ${TPK_LDFLAGS})
ENDIF(DEFINED TPK_LDFLAGS)

INSTALL(TARGETS ${TARGET_TPK} DESTINATION ${BINDIR})


