IF(NOT DEFINED TARGET_TPK_BACKEND)
  SET(TARGET_TPK_BACKEND "tpk-backend")
ENDIF(NOT DEFINED TARGET_TPK_BACKEND)

SET(TARGET_TPK ${TARGET_TPK_BACKEND})
OPTION(HOSTTEST "Option for the test on the host PC" OFF)
SET(SRCS
    main.cc
    task.cc
    step/step_parse.cc
    step/step_create_symbolic_link.cc
    step/step_copy_manifest_xml.cc
    ../xml_parser/xml_parser.cc
)
ADD_EXECUTABLE(${TARGET_TPK} ${SRCS})

SET(TPK_LDFLAGS -rdynamic)
IF(${HOSTTEST})
  MESSAGE("Host Test mode.")
SET(TPK_CFLAGS ${TPK_CFLAGS} -DHOSTTEST)
  SET(MOCK_MODULES test/mock_pkgmgr_installer.c)
SET(SRCS ${SRCS} ${MOCK_MODULES})

ELSE(${HOSTTEST})
  SET(TPK_CFLAGS ${TPK_CFLAGS} -I${CMAKE_CURRENT_SOURCE_DIR}/../)
  ADD_DEFINITIONS(${TPK_CFLAGS})
ENDIF(${HOSTTEST})

APPLY_PKG_CONFIG(${TARGET_TPK} PUBLIC PKGMGR_DEPS Boost)
TARGET_LINK_LIBRARIES(${TARGET_TPK} PUBLIC ${TARGET_LIBNAME_COMMON} -lboost_regex)

INSTALL(TARGETS ${TARGET_TPK} DESTINATION ${BINDIR})
