SET(SRCS
    step/step_create_symbolic_link.cc
    step/step_copy_manifest_xml.cc
    step/step_parse.cc
    step/step_parse_recovery.cc
    tpk_app_query_interface.cc
    tpk_installer.cc
    xml_parser/xml_parser.cc
)
ADD_LIBRARY(${TARGET_LIBNAME_TPK} STATIC ${SRCS})
ADD_EXECUTABLE(${TARGET_TPK_BACKEND} "tpk_backend.cc")

TARGET_INCLUDE_DIRECTORIES(${TARGET_LIBNAME_TPK} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
TARGET_INCLUDE_DIRECTORIES(${TARGET_TPK_BACKEND} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")

APPLY_PKG_CONFIG(${TARGET_LIBNAME_TPK}
  PUBLIC PKGMGR_DEPS
  TPK_MANIFEST_HANDLERS_DEPS
  MANIFEST_PARSER_DEPS
  PKGMGR_INSTALLER_DEPS
  ENCRYPTION_DEPS
  Boost
)
TARGET_LINK_LIBRARIES(${TARGET_LIBNAME_TPK} PUBLIC ${TARGET_LIBNAME_COMMON})
TARGET_LINK_LIBRARIES(${TARGET_TPK_BACKEND} PRIVATE ${TARGET_LIBNAME_TPK})

INSTALL(TARGETS ${TARGET_TPK_BACKEND} DESTINATION ${BINDIR})
